envoy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend-route
  namespace: backend
spec:
  parentRefs:
  - name: backend-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v1/auth
    backendRefs:
    - name: api-auth
      port: 8082
    filters:
    - type: URLRewrite
      urlRewrite:
        path: 
          type: ReplacePrefixMatch
          replacePrefixMatch: /

  - matches:
    - path:
        type: PathPrefix
        value: /v1/products
    backendRefs:
    - name: api-products
      port: 8081
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
