envoy/ratelimit.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: local-ratelimit
  namespace: backend
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: backend-route
  rateLimit:
    global:
      rules:
      - limit:
          requests: 1
          unit: Second
